--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "framer-motion": "^6.2.3",
     "next": "12.0.9",
     "react": "17.0.2",
