--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5"
   },
