--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9"
   }
